--- a/pom.xml
+++ b/pom.xml
@@ -112,7 +112,7 @@
                 <artifactId>maven-thrift-plugin</artifactId>
                 <version>0.1.10</version>
                 <configuration>
-                    <thriftExecutable>/local/cj.gomes/thrift-0.9.2/compiler/cpp/thrift</thriftExecutable>
+                    <thriftExecutable>thrift</thriftExecutable>
                 </configuration>
                 <executions>
                     <execution>
