--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,12 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>18.0</version>
-    </dependency>
+        </dependency>
+        <dependency>
+            <groupId>net.openhft</groupId>
+            <artifactId>affinity</artifactId>
+            <version>3.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <pluginRepositories>
